      then the result preserves the original color depth. But the result may now preserve even indexed formats.
  ! EndTransformColors/EndAdjustBrightness/EndAdjustContrast/EndAdjustGamma/EndClear/EndCopyTo/EndDither
    /EndDrawInto/EndInvert/EndMakeGrayscale/EndMakeOpaque/EndMakeTransparent/EndQuantize/EndReplaceColor methods:
    The return type has been changed to bool from void.
  + New Combine/BeginCombine/EndCombine/CombineAsync methods to combine two bitmaps using a specified function.
  + New TransformColors/BeginTransformColors/TransformColorsAsync overloads with callbacks using Color64/ColorF
    types to support wide pixel formats.
  + New AdjustBrightness/AdjustContrast/AdjustGamma/Invert/MakeGrayscale/MakeOpaque/MakeTransparent/ReplaceColor/
    Resize/ToGrayscale/ToTransparent overloads with ParallelConfig and IAsyncContext parameters.
  * Clear/BeginClear/ClearAsync methods:
    * Radically improving performance for all known and many custom pixel formats.
  * TransformColorsAsync/AdjustBrightnessAsync/AdjustContrastAsync/ClearAsync/CopyToAsync/DitherAsync/DrawIntoAsync/
    InvertAsync/MakeGrayscaleAsync/MakeOpaqueAsync/MakeTransparentAsync/QuantizeAsync/ReplaceColorAsync methods:
    The return type has been changed to Task<bool> from Task.
  - Clone/BeginClone/CloneAsync methods: Fixing palette color space when creating an exact clone with identical
    pixel format of an indexed bitmap with a different color space.
* BitmapDataFactory class:
  + New Load/BeginLoad/LoadAsync overloads with WorkingColorSpace parameter.
  * CreateBitmapData methods: In some overloads some parameters have been made optional.
* ColorExtensions class:
  + New ToGray overloads with WorkingColorSpace parameter.
  - Fixing GetBrightness(Color64, WorkingColorSpace) method for the linear color space.

* KGySoft.Drawing.Shapes namespace
==================================
* BitmapDataExtensions class: