@@ -33,6 +33,9 @@
   ! EndTransformColors/EndAdjustBrightness/EndAdjustContrast/EndAdjustGamma/EndClear/EndCopyTo/EndDither
     /EndDrawInto/EndInvert/EndMakeGrayscale/EndMakeOpaque/EndMakeTransparent/EndQuantize/EndReplaceColor methods:
     The return type has been changed to bool from void.
+  ! Resize/BeginResize/ResizeAsync methods:
+    ! If the original pixel format has no transparency, the result is also created with a pixel format without
+      alpha channel.
   + New Combine/BeginCombine/EndCombine/CombineAsync methods to combine two bitmaps using a specified function.
   + New TransformColors/BeginTransformColors/TransformColorsAsync overloads with callbacks using Color64/ColorF
     types to support wide pixel formats.
@@ -144,7 +147,10 @@
   * Self-allocating CreateBitmapData overloads: By default, no longer using array pooling if the natural element
     type of the underlying array is other than byte. This can be adjusted by the new PoolingStrategy property.
   + New PoolingStrategy property
-- BitmapDataExtensions class:
+! BitmapDataExtensions class:
+  ! Resize/BeginResize/ResizeAsync methods:
+    ! The pixel format of the result is no longer always Format32bppArgb. If the source bitmap has a wide
+      format, then the result preserves the original color depth. But the result always is at least a 32 BPP format.
   - Cloning a bitmap with a custom pixel format may have failed if the source bitmap was so huge that the cloned
     bitmap could not be created with a byte array buffer. If the bitmap is too big even for an UInt64 array buffer,
     then a NotSupportedException is thrown.
